# roman-numeral-calculator

./: Makefile  Makefile.am  README.md  RomanNumeral.c  RomanNumeral.h  RomanNumeralCalculator.c  RomanNumeralCalculator.h  configure.ac  main.c  testcase.txt
src/: Makefile.am  RomanNumeral.c  RomanNumeral.h  RomanNumeralCalculator.c  RomanNumeralCalculator.h  main.c
tests/: Makefile.am  check_calculator.c  testcase.txt
